MARKETINFRA-719 build fix